<resources>
    <string name="app_name">UniteRide</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding_1_5_title">Welcome to UniteRide</string>
    <string name="onboarding_1_5_content">Discover fast planning and simple bus info
start your journey now!</string>
    <string name="onboarding_1_5_button_content">Get Started</string>
    <string name="onboarding_1_5_contentDescription">onboarding 1/5 content welcome picture</string>

    <string name="onboarding_2_5_title">Choose your preferred language</string>
    <string name="onboarding_2_5_content">Please select the language you would like to use while running UniteRide.</string>
    <string name="onboarding_2_5_language_default">English</string>
    <string name="onboarding_2_5_button_content">Continue</string>

    <string name="onboarding_3_5_title">Get instant bus arrival notifications!</string>
    <string name="onboarding_3_5_content">We can send you real-time alerts when your bus arrives, so you know exactly when it’s there and stay on top of your travel plans effortlessly.</string>
    <string name="onboarding_3_5_access_button_content">Allow notification</string>
    <string name="onboarding_3_5_button_content">Not right now</string>
    <string name="onboarding_3_5_contentDescription" translatable="false">onboarding 3/5 content welcome picture</string>

    <string name="onboarding_4_5_title">Ride smarter in a snap!</string>
    <string name="onboarding_4_5_content">We’ll need to access your current location to locate the closest bus and bus stop, so you can plan your journey with ease and speed right away.</string>
    <string name="onboarding_4_5_access_button_content">Allow location access</string>
    <string name="onboarding_4_5_button_content">Not right now</string>
    <string name="onboarding_4_5_contentDescription" translatable="false">onboarding 4/5 content welcome picture</string>

    <string name="onboarding_5_5_title">You are all set!</string>
    <string name="onboarding_5_5_content">You are now ready to dive in and start using our bus app to plan your trips with ease and confidence</string>
    <string name="onboarding_5_5_button_content">Get Started</string>

    <string name="bus_company_kmb_name">KMB</string>
    <string name="bus_company_LWB_name">LWB</string>
    <string name="bus_company_ctb_name">CTB</string>
    <string name="bus_company_gmb_name">GMB</string>

    <string name="region_nt_name">New Territories</string>
    <string name="region_kln_name">Kowloon</string>
    <string name="region_hki_name">Hong Kong Island</string>

    <string name="bottomNav_saved_tabName">Saved</string>
    <string name="bottomNav_nearby_tabName">Nearby</string>
    <string name="bottomNav_search_tabName">Search</string>
    <string name="bottomNav_news_tabName">News</string>
    <string name="bottomNav_settings_tabName">Settings</string>

    <string name="frag_search_searchBar_hint">Search Bus Routes</string>
    <string name="frag_search_specialRoute_name">SPECIAL</string>

    <string name="frag_saved_noSaved_title">Hmm.... No saved stops yet</string>

    <string name="frag_nearby_noStops_name">No routes found nearby</string>
    <string name="frag_nearby_foundStop_name">Found</string>

    <string name="frag_news_noNewNews_name">No new traffic news found</string>

    <string name="detail_view_normal_route_name">Normal Route</string>
    <string name="detail_view_eta_arriving_name">Arriving</string>
    <string name="detail_view_eta_track_bus_name">Track Bus</string>
    <string name="detail_view_save_route_stop_name">Save stop</string>
    <string name="detail_view_save_route_stop_msg">Saved stop: </string>
    <string name="detail_view_unsave_route_stop_name">Un-save stop</string>

    <string name="settings_category_langOption_name">Language</string>
    <string name="settings_category_themeOption_name">Theme</string>
    <string name="settings_category_accessibilityOption_name">Accessibility</string>
    <string name="settings_category_aboutOption_name">About</string>
    <string name="settings_category_featuresOption_name">Features</string>

    <string name="settings_mainSwitchPref_followSys_name">Follow System Settings</string>

    <string name="settings_lang_chineseTradOption_name">Traditional Chinese</string>
    <string name="settings_lang_chineseSimpOption_name">Simplified Chinese</string>
    <string name="settings_lang_englishOption_name">English</string>
    <string name="settings_language_changed">Language changed successfully</string>

    <string name="settings_theme_lightOption_name">Light Theme</string>
    <string name="settings_theme_darkOption_name">Dark Theme</string>

    <string name="settings_accessibility_boldOption_name">Bold Text</string>

    <string name="settings_database_fetchOption_name">Update Database</string>

    <string name="settings_category_database_name">Database</string>

    <string name="settings_about_permissionOption_name">Permissions</string>
    <string name="settings_about_libOption_name">Libraries</string>
    <string name="settings_about_githubOption_name">View On GitHub</string>

    <string name="settings_features_RTHKOption_name">Show RTHK Traffic News</string>
    <string name="settings_features_RTHKOption_desc">News available only in Traditional Chinese</string>

    <string name="settings_location_required_req_name">Location access required</string>
    <string name="settings_location_denied_name">Location access denied</string>

    <string name="err_msg_noInternet_name">No internet</string>
    <string name="err_msg_noInternet_desc">Unable to load. Check your Internet connection and try again.</string>

    <string name="notif_trackBus_name">Tracking for </string>
    <string name="notif_channel_name">Bus Tracking</string>
    <string name="notif_channel_description">Track bus arrival times</string>
    <string name="notif_stop_tracking">Stop Tracking</string>
    <string name="notif_tracking_started">Started tracking bus at %1$s</string>
    <string name="bus_eta_msg_loadingETA_name">Loading ETA...</string>
    <string name="bus_eta_msg_noBus_name">No available bus at the moment</string>
    <string name="bus_eta_minute_text_name">min</string>
    
    <string name="bus_bound_inbound" translatable="false">Inbound</string>
    <string name="bus_bound_outbound" translatable="false">Outbound</string>
    <string name="saved_stop_removed" translatable="false">Removed %1$s from saved stops</string>

    <string name="permission_network_name">Network</string>
    <string name="permission_network_desc">For fetching bus route information from government API</string>
    <string name="permission_location_name">Location(Optional)</string>
    <string name="permission_location_desc">For Displaying nearby bus route base on the current location coordinates, showing current location on the map</string>
    <string name="permission_notification_name">Notification (Optional)</string>
    <string name="permission_notification_desc">For displaying ETA for the bus route</string>
    <string name="permission_disclaimer_name_desc">
    The application does not collect or transmit your location or any other personal data for online processing.\n\nAll location data is processed only on your device.
    </string>

    <string name="err_unable_to_load_busStop_name">Unable to load bus stop</string>
    <string name="err_busStop_not_found_name">No bus stops found for this route</string>
    <string name="err_unable_to_load_gmb_desc">Unable to GMB bus stop. Check your internet and try again later</string>
    <string name="err_database_err">Database Error: Please update the database</string>

    <string-array name="options_application_theme">
        <item name="light_theme">Light</item>
        <item name="dark_theme">Dark</item>
    </string-array>

    <string-array name="settings_category">
        <item name="category_language">Language</item>
    </string-array>
</resources>