<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_main_saved"
        android:icon="@drawable/baseline_bookmark_border_24"
        android:title="@string/bottomNav_saved_tabName" />
    <item
        android:id="@+id/menu_item_main_nearby"
        android:icon="@drawable/baseline_location_pin_24"
        android:title="@string/bottomNav_nearby_tabName" />
    <item
        android:id="@+id/menu_item_main_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/bottomNav_search_tabName" />
    <item
        android:id="@+id/menu_item_main_news"
        android:icon="@drawable/baseline_notifications_none_24"
        android:title="@string/bottomNav_news_tabName" />
    <item
        android:id="@+id/menu_item_main_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/bottomNav_settings_tabName" />
</menu>