<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="18dp"
    android:layout_marginHorizontal="18dp"
    android:layout_marginBottom="49dp">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_lt_std_black"
            android:text="@string/onboarding_2_5_title"
            android:textColor="@color/onboarding_topHeading"
            android:textFontWeight="800"
            android:textSize="34sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/general_sans_semibold"
            android:letterSpacing="0.08"
            android:text="@string/onboarding_2_5_content"
            android:textColor="@color/brand_colorOnSurfaceSecondary"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        app:icon="@drawable/ic_language"
        app:iconTint="@color/brand_colorPrimary"
        app:iconSize="16dp"
        app:iconGravity="start"
        app:iconPadding="0dp"
        android:id="@+id/language_button"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:background="@drawable/button_language"
        android:fontFamily="@font/general_sans_semibold"
        android:text="@string/onboarding_2_5_language_default"
        android:textSize="12sp"
        android:textColor="@color/brand_colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/onboarding_2_5_next_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="@font/general_sans_semibold"
        android:text="@string/onboarding_2_5_button_content"
        android:textStyle="bold"
        android:textColor="@color/default_buttonColorText"
        app:backgroundTint="@color/default_buttonColorBackground"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>