<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="18dp"
    android:layout_marginHorizontal="18dp"
    android:layout_marginBottom="49dp">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_lt_std_black"
            android:gravity="center"
            android:text="@string/onboarding_5_5_title"
            android:textColor="@color/onboarding_topHeading"
            android:textFontWeight="800"
            android:textSize="25sp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/general_sans_semibold"
            android:gravity="center"
            android:text="@string/onboarding_5_5_content"
            android:textColor="@color/brand_colorOnSurfaceSecondary"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/onboarding_5_5_next_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="@font/general_sans_semibold"
        android:text="@string/onboarding_5_5_button_content"
        android:textStyle="bold"
        android:textColor="@color/default_buttonColorText"
        app:backgroundTint="@color/default_buttonColorBackground"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>